Create photography page, update design page.
Simplified the design page making it more responsive. Created the
photography page as a clone of the design page, but still need to add
the correct images.

--- a/Index.html
+++ b/Index.html
@@ -42,11 +42,11 @@
         <h1 class=myname>Thomas Rudge</h1>
         <nav>
 	       <ul class=navlist>
-            <li class=navli><a href="" id=selected_page title="Home">&#9978;</a></li>
+            <li class=navli><a id=selected_page title="Home">&#9978;</a></li>
 		      <li class=navli><a href="html\professional.html" title="Professional work experience">Professional &#9874;</a></li>
 		      <li class=navli><a href="html\software.html" title="Personal software projects">Software &#9000;</a></li>
 		      <li class=navli><a href="html\design.html#DESIGN" title="Design work">Design &#128393;</a></li>
-		      <li class=navli><a href="html\photography.html" title="Photographs">Photography &#128247;</a></li>
+		      <li class=navli><a href="html\photography.html#PHOTO" title="Photographs">Photography &#128247;</a></li>
 		      <li class=navli><a href="html\contact.html" title="Contact me">Contact &#9993;</a></li>
 	       </ul>
         </nav>
