--- a/html/contact.html
+++ b/html/contact.html
@@ -46,8 +46,8 @@
 		      <li class=navli><a href="professional.html" title="Professional work experience">Professional &#9874;</a></li>
 		      <li class=navli><a href="software.html" title="Personal software projects">Software &#9000;</a></li>
 		      <li class=navli><a href="design.html#DESIGN" title="Design work">Design &#128393;</a></li>
-		      <li class=navli><a href="photography.html" title="Photographs">Photography &#128247;</a></li>
-		      <li class=navli><a href="" id=selected_page title="Contact me">Contact &#9993;</a></li>
+		      <li class=navli><a href="photography.html#PHOTO" title="Photographs">Photography &#128247;</a></li>
+		      <li class=navli><a id=selected_page title="Contact me">Contact &#9993;</a></li>
 	       </ul>
         </nav>
       </div>
