--- a/html/software.html
+++ b/html/software.html
@@ -45,9 +45,9 @@
 	       <ul class=navlist>
             <li class=navli><a href="..\index.html" title="Home">&#9978;</a></li>
 		      <li class=navli><a href="professional.html" title="Professional work experience">Professional &#9874;</a></li>
-		      <li class=navli><a href="" id=selected_page title="Personal software projects">Software &#9000;</a></li>
+		      <li class=navli><a id=selected_page title="Personal software projects">Software &#9000;</a></li>
 		      <li class=navli><a href="design.html#DESIGN" title="Design work">Design &#128393;</a></li>
-		      <li class=navli><a href="photography.html" title="Photographs">Photography &#128247;</a></li>
+		      <li class=navli><a href="photography.html#PHOTO" title="Photographs">Photography &#128247;</a></li>
 		      <li class=navli><a href="contact.html" title="Contact me">Contact &#9993;</a></li>
 	       </ul>
         </nav>
