--- a/html/swift_page.html
+++ b/html/swift_page.html
@@ -51,7 +51,7 @@
 		      <li class=navli><a href="professional.html" title="Professional work experience">Professional &#9874;</a></li>
 		      <li class=navli><a href="software.html" id=selected_page title="Personal software projects">Software &#9000;</a></li>
 		      <li class=navli><a href="design.html#DESIGN" title="Design work">Design &#128393;</a></li>
-		      <li class=navli><a href="photography.html" title="Photographs">Photography &#128247;</a></li>
+		      <li class=navli><a href="photography.html#PHOTO" title="Photographs">Photography &#128247;</a></li>
 		      <li class=navli><a href="contact.html" title="Contact me">Contact &#9993;</a></li>
 	       </ul>
         </nav>
