Add to Professional Page. Improve mobile support.

--- a/Index.html
+++ b/Index.html
@@ -37,7 +37,7 @@
 <body id=bhome style='height:100%;'>
   <div id=container style='height:100%;'>
     <header>
-      <img class=myphoto src="images\me.png">
+      <img class=myphoto src="images\logos\me.png">
       <div id=headerdiv>
         <h1 class=myname>Thomas Rudge</h1>
         <nav>
@@ -72,7 +72,7 @@
     </header>
     <div class=gen_div>
     <p class='gen_text med_text margin40'>
-    <span class=gen_title>Hello...</span><br>
+    <span class='gen_title title_text'>Hello...</span><br>
     ...Thomas is originally from the UK. He spent 7 years working with Barclays Corporate and Investment Bank as a Business Analyst and Technical 
     Subject Matter Expert. His main role involved sitting on the management team of Barclays Reconciliation Services Utility, and helping to manage 
     the departments IT systems and global operations. Since moving to India he has written and released his own business cash management software, 
