--- a/html/contact.html
+++ b/html/contact.html
@@ -38,7 +38,7 @@
   <div id=container style='height:100%;'>
     <header>
       <a href="..\index.html" title="Home">
-        <img class=myphoto src="..\images\me.png">
+        <img class=myphoto src="..\images\logos\me.png">
       </a>
       <div id=headerdiv>
         <h1 class=myname>Thomas Rudge</h1>
