--- a/html/design.html
+++ b/html/design.html
@@ -40,7 +40,7 @@
   <div id=container>
     <header>
       <a href="..\index.html" title="Home">
-        <img class=myphoto src="..\images\me.png">
+        <img class=myphoto src="..\images\logos\me.png">
       </a>
       <div id=headerdiv>
         <h1 class=myname>Thomas Rudge</h1>
