--- a/html/professional.html
+++ b/html/professional.html
@@ -38,7 +38,7 @@
   <div id=container>
     <header>
       <a href="..\index.html" title="Home">
-        <img class=myphoto src="..\images\me.png">
+        <img class=myphoto src="..\images\logos\me.png">
       </a>
       <div id=headerdiv>
         <h1 class=myname>Thomas Rudge</h1>
@@ -72,171 +72,452 @@
         </li>
       </ul>
     </header>
+    <br>
     <div class=gen_div>
       <p class='gen_text justify med_text margin70'>
-        <span class=gen_title>Curriculum Vitae</span><br>
+        <span class='gen_title title_text'>Curriculum Vitae</span><br>
         This tool will generate Swift MT940 and MT950 cash statements from a specific csv format.
       </p>
     </div>
     <br>
-    <div class=gen_div>
-      <div class=margin70>
-        <table class=standard_table>
+    <div class='gen_div block_'>
+      <p class='gen_text justify med_text margin70 no_bottom'>
+        <span class='gen_title no_top no_bottom'>Skills</span><br>
+      </p>
+      <!-- This will only appear if the screen is too narrow for the table -->
+      <div id=skill_list class='gen_text margin40 no_top'>
+        <ul>
+          <li>
+            <img class=table_img src='..\images\logos\python.png'> Python
+          </li>
+          <li>
+            <img class=table_img src='..\images\logos\javascript.png'> Javascript
+          </li>
+          <li>
+            <img class=table_img src='..\images\logos\html.png'> HTML
+          </li>
+          <li>
+            <img class=table_img src='..\images\logos\css.png'> CSS
+          </li>
+          <li>
+            <img class=table_img src='..\images\logos\sql.png'> SQL
+          </li>
+          <li>
+            <img class=table_img src='..\images\logos\vba.png'> VBA
+          </li>
+          <li>
+            <img class=table_img src='..\images\logos\excel.png'> MS Excel
+          </li>
+          <li>
+            <img class=table_img src='..\images\logos\access.png'> MS Access
+          </li>
+          <li>
+            <img class=table_img src='..\images\logos\stl.png'> STL TLM
+          </li>
+          <li>
+            <img class=table_img src='..\images\logos\testing.png'> UAT
+          </li>
+          <li>
+            <img class=table_img src='..\images\logos\optimise.png'> Optimisation
+          </li>
+          <li>
+            <img class=table_img src='..\images\logos\problem.png'> Problem Solving
+          </li>
+          <li>
+            <img class=table_img src='..\images\logos\risk.png'> Risk Analysis
+          </li>
+          <li>
+            <img class=table_img src='..\images\logos\analysis.png'> Operations Analysis
+          </li>
+        </ul>
+      </div>
+      <div id=skill_table class=margin70>
+        <table class='standard_table nodecoration margin70 right_txt no_top'>
           <tr>
-            <th colspan=2>
-              Period
-            </th>
-            <th>
-              Position
-            </th>
-            <th>
-              Company
-            </th>
-            <th>
-              Location
-            </th>
-          </tr>
-          <tr>
-            <td class=centred_txt>
-              Oct 2014
-            </td>
-            <td class=centred_txt>
-              Present
+            <td>
+            Python <img class=table_img src='..\images\logos\python.png'>
             </td>
             <td>
-              Self Employed
+            Javascript <img class=table_img src='..\images\logos\javascript.png'>
             </td>
             <td>
-              Various
+            HTML <img class=table_img src='..\images\logos\html.png'>
             </td>
             <td>
-              Kohima, India
-            </td>
-          </tr>
-          <tr>
-            <td class=centred_txt>
-              Jul 2013
-            </td>
-            <td class=centred_txt>
-              Jul 2014
+            CSS <img class=table_img src='..\images\logos\css.png'>
             </td>
             <td>
-              Career Break
-            </td>
-            <td>
-            </td>
-            <td>
-              India
-            </td>
-          </tr>
-          <tr>
-            <td class=centred_txt>
-              Sep 2010
-            </td>
-            <td class=centred_txt>
-              Jun 2013
-            </td>
-            <td>
-              Technical SME (Analyst)
-            </td>
-            <td>
-              Barclays Plc
-            </td>
-            <td>
-              Poole, UK
-            </td>
-          </tr>
-          <tr>
-            <td class=centred_txt>
-              Mar 2008
-            </td>
-            <td class=centred_txt>
-              Aug 2010
-            </td>
-            <td>
-              Business Analyst, Corporate Change
-            </td>
-            <td>
-              Barclays Plc
-            </td>
-            <td>
-              Poole, UK
+            SQL <img class=table_img src='..\images\logos\sql.png'>
             </td>
           </tr>
           <tr>
-            <td class=centred_txt>
-              Jun 2007
-            </td>
-            <td class=centred_txt>
-              Feb 2008
+            <td>
+            VBA <img class=table_img src='..\images\logos\vba.png'>
             </td>
             <td>
-              TLM System Administrator
+            MS Excel <img class=table_img src='..\images\logos\excel.png'>
             </td>
             <td>
-              Barclays Plc
+            MS Access <img class=table_img src='..\images\logos\access.png'>
             </td>
             <td>
-              Poole, UK
+            STL TLM <img class=table_img src='..\images\logos\stl.png'>
+            </td>
+            <td>
+            UAT <img class=table_img src='..\images\logos\testing.png'>
             </td>
           </tr>
           <tr>
-            <td class=centred_txt>
-              Nov 2006
-            </td>
-            <td class=centred_txt>
-              May 2007
+            <td>
+            Optimisation <img class=table_img src='..\images\logos\optimise.png'>
             </td>
             <td>
-              Account Manager
+            <span class=small_text>Problem Solving</span> <img class=table_img src='..\images\logos\problem.png'>
             </td>
             <td>
-              Barclays Plc
+            <span class=small_text>Risk Analysis</span> <img class=table_img src='..\images\logos\risk.png'>
+            </td>
+            <td colspan=2>
+            Operations Analysis <img class=table_img src='..\images\logos\analysis.png'>
             </td>
             <td>
-              Poole, UK
             </td>
           </tr>
         </table>
       </div>
     </div>
-    <div class=gen_div>
-      <div class=margin70>
-        <table class=standard_table>
+    <br>
+    <div class='gen_div block_'>
+      <div>
+        <p class='gen_text justify med_text margin70 no_bottom'>
+          <span class='gen_title no_top no_bottom'>Experience</span><br>
+        </p>
+      </div>
+      <!-- This will only appear if the screen is too narrow to support the table -->
+      <div id=short_table1 class=margin70>
+        <span class='margin40 gen_title small_text'>Professional</span>
+        <table class='standard_table decorated margin40 no_top'>
+          <tr>
+            <th>
+            </th>
+          </tr>
+          <tr>
+            <td>
+            Self Employed <span class=small_text>(Software, Graphic Design)</span>
+            </td>
+          </tr>
+          <tr>
+            <td>
+            Oct 2014 - Present
+            </td>
+          </tr>
+          <tr>
+            <td>
+            Kohima, India
+            </td>
+          </tr>
+          <tr>
+            <th>
+            </th>
+          </tr>
+          <tr>
+            <td>
+            Career Break
+            </td>
+          </tr>
+          <tr>
+            <td>
+            Jul 2013 - Jul 2014
+            </td>
+          </tr>
+          <tr>
+            <td>
+            India
+            </td>
+          </tr>
+          <tr>
+            <th>
+            </th>
+          </tr>
+          <tr>
+            <td>
+            Technical SME (Analyst)
+            </td>
+          </tr>
+          <tr>
+            <td>
+            Sep 2010 - Jun 2013
+            </td>
+          </tr>
+          <tr>
+            <td>
+            Barclays Plc, Poole, UK
+            </td>
+          </tr>
+          <tr>
+            <th>
+            </th>
+          </tr>
+          <tr>
+            <td>
+            Business Analyst <span class=small_text>Corporate Change</span>
+            </td>
+          </tr>
+          <tr>
+            <td>
+            Mar 2008 - Aug 2010
+            </td>
+          </tr>
+          <tr>
+            <td>
+            Barclays Plc, Poole, UK
+            </td>
+          </tr>
+          <tr>
+            <th>
+            </th>
+          </tr>
+          <tr>
+            <td>
+            TLM System Administrator
+            </td>
+          </tr>
+          <tr>
+            <td>
+            Jun 2007 - Feb 2008
+            </td>
+          </tr>
+          <tr>
+            <td>
+            Barclays Plc, Poole, UK
+            </td>
+          </tr>
+          <tr>
+            <th>
+            </th>
+          </tr>
+          <tr>
+            <td>
+            Account Manager
+            </td>
+          </tr>
+          <tr>
+            <td>
+            Nov 2006 - May 2007
+            </td>
+          </tr>
+          <tr>
+            <td>
+              Barclays Plc, Poole, UK
+            </td>
+          </tr>
+        </table>
+      </div>
+      <br>
+      <div id=short_table2 class=margin70>
+        <span class='margin40 gen_title small_text'>Voluntary</span>
+        <table class='standard_table decorated margin40'>
+          <tr>
+            <th>
+            </th>
+          </tr>
+          <tr>
+            <td>
+            Teacher of English & IT
+            </td>
+          </tr>
+          <tr>
+            <td>
+            Jul 2014 -Present
+            </td>
+          </tr>
+          <tr>
+            <td>
+            C.C.School, Kohima, India
+            </td>
+          </tr>
+        </table>
+      </div>
+      <!-- This will only appear if the screen is wide enough -->
+      <div id=full_table1 class=margin70>
+        <span class='margin70 gen_title small_text'>Professional</span>
+        <table class='standard_table decorated decorated_colour margin70 no_top'>
           <tr>
             <th colspan=2>
-              Period
+            Period
             </th>
             <th>
-              Position
+            Position
             </th>
             <th>
-              Organisation
+            Company
             </th>
             <th>
-              Location
+            Location
             </th>
           </tr>
           <tr>
             <td class=centred_txt>
-              Jul 2014
+            Oct 2014
             </td>
             <td class=centred_txt>
-              Present
+            Present
             </td>
             <td>
-              Teacher of English & IT
+            Self Employed <span class=small_text>(Software, Graphic Design)</span>
             </td>
             <td>
-              C.C.School
+            Various
             </td>
             <td>
-              Kohima, India
+            Kohima, India
+            </td>
+          </tr>
+          <tr>
+            <td class=centred_txt>
+            Jul 2013
+            </td>
+            <td class=centred_txt>
+            Jul 2014
+            </td>
+            <td>
+            Career Break
+            </td>
+            <td>
+            n/a
+            </td>
+            <td>
+            India
+            </td>
+          </tr>
+          <tr>
+            <td class=centred_txt>
+            Sep 2010
+            </td>
+            <td class=centred_txt>
+            Jun 2013
+            </td>
+            <td>
+            Technical SME (Analyst)
+            </td>
+            <td>
+            Barclays Plc
+            </td>
+            <td>
+            Poole, UK
+            </td>
+          </tr>
+          <tr>
+            <td class=centred_txt>
+            Mar 2008
+            </td>
+            <td class=centred_txt>
+            Aug 2010
+            </td>
+            <td>
+            Business Analyst, Corporate Change
+            </td>
+            <td>
+            Barclays Plc
+            </td>
+            <td>
+            Poole, UK
+            </td>
+          </tr>
+          <tr>
+            <td class=centred_txt>
+            Jun 2007
+            </td>
+            <td class=centred_txt>
+            Feb 2008
+            </td>
+            <td>
+            TLM System Administrator
+            </td>
+            <td>
+            Barclays Plc
+            </td>
+            <td>
+            Poole, UK
+            </td>
+          </tr>
+          <tr>
+            <td class=centred_txt>
+            Nov 2006
+            </td>
+            <td class=centred_txt>
+            May 2007
+            </td>
+            <td>
+            Account Manager
+            </td>
+            <td>
+            Barclays Plc
+            </td>
+            <td>
+            Poole, UK
+            </td>
+          </tr>
+        </table>
+      </div>
+      <br>
+      <div id=full_table2 class=margin70>
+        <span class='margin70 gen_title small_text'>Voluntary</span>
+        <table class='standard_table decorated decorated_colour margin70'>
+          <tr>
+            <th colspan=2>
+            Period
+            </th>
+            <th>
+            Position
+            </th>
+            <th>
+            Organisation
+            </th>
+            <th>
+            Location
+            </th>
+          </tr>
+          <tr>
+            <td class=centred_txt>
+            Jul 2014
+            </td>
+            <td class=centred_txt>
+            Present
+            </td>
+            <td>
+            Teacher of English & IT
+            </td>
+            <td>
+            C.C.School
+            </td>
+            <td>
+            Kohima, India
             </td>
           </tr>
         </table>
       </div>
     </div>
+    <br>
+    <div class=gen_div>
+      <p class='gen_text justify med_text margin70'>
+        <span class=gen_title>Testimonials and Awards</span>
+        Significant Technology Achievement Award in recognition of the outstanding contribution to the Kenya Replatforming Programme.<br> – Awarded by CIO of Technology Department & COO of Barclays Africa
+        <br>
+        <br>
+        Global Payments Award, for playing a critical role in the resolution of a BAU system incident.<br> – Awarded by Vice Chairman of Global Payments
+        <br>
+        <br>
+        “He is able to couple the knowledge he has built up with his intelligent, thoughtful way of assessing a task, and this has given him a good reputation across local and senior management within RSU.”<br> – Stewart Makin, Assistant Vice President (Caption from 2012 appraisal*)
+        <br>
+        <br>
+        “Tom has had a fantastic impact on the department’s financials this year…his ability to make departmental changes to improve our position is fantastic.”<br> – Nikki Turner, Operations Manager (Caption from 2011 appraisal*)
+        <br>
+        <br>
+        <span class=small_text>* Past appraisals available upon request.</span>
+      </p>
+    </div>
+    <br>
     <footer class=relative_footer>
     &#169; Copyright 2016 Thomas Edward Rudge. All rights reserved. All materials presented on this website are protected by copyright.<br>
     Site not working properly? &#128534; <a href="mailto:thomas.rudge85@gmail.com?Subject=Something%20is%20wrong%20with%20your%20site!">Please let me know.</a>
