--- a/html/swift_page.html
+++ b/html/swift_page.html
@@ -42,7 +42,7 @@
     Woops! You have Javascript disabled. Unfortunately this page is as useful as a chocolate teapot without it (but not as tasty).
     </div>
     <header>
-      <img class=myphoto src="..\images\me.png">
+      <img class=myphoto src="..\images\logos\me.png">
       <div id=headerdiv>
         <h1 class=myname>Thomas Rudge</h1>
         <nav>
@@ -77,11 +77,11 @@
     </header>
     <br>
     <div id=mtbanner class=gen_div>
-      <img id=small_mt_pic src="..\images\mt_logo_small.png" alt="MT Logo xs" height=75 width=75>
+      <img id=small_mt_pic src="..\images\logos\mt_logo_small.png" alt="MT Logo xs" height=75 width=75>
     </div>
     <div class=gen_div>
       <p class='gen_text justify med_text margin0'>
-        <span class=gen_title>Online MT940/950 Generator</span><br>
+        <span class='gen_title title_text'>Online MT940/950 Generator</span><br>
         This is an online swift MT940/950 generator. The header for the csv input file can be found 
         <a class=normal_link href='../other/input_file.txt' target='_blank'>here</a> 
         and the field definitions can be found 
