--- a/html/software.html
+++ b/html/software.html
@@ -39,7 +39,7 @@
   <div id=container>
     <header>
       <a href="..\index.html" title="Home">
-        <img class=myphoto src="..\images\me.png">
+        <img class=myphoto src="..\images\logos\me.png">
       </a>
       <div id=headerdiv>
         <h1 class=myname>Thomas Rudge</h1>
@@ -75,16 +75,16 @@
     </header>
     <div class=gen_div>
       <p class='gen_text justify med_text margin40'>
-        <span class=gen_title>Software</span><br>
+        <span class='gen_title title_text'>Software</span><br>
         Below are some of the main software projects I have been working on over the years.
       </p>
     </div>
     <hr>
-    <div class=gen_div>
+    <div class='gen_div margin70'>
       <a href="http://neposservice.wix.com/nepos" title="Nepos Software" target="_blank">
-        <img class='genphoto margin70' src="..\images\nepos_logo.png" alt="NEPOS Logo" width=150 height=185>
+        <img class=genphoto src="..\images\logos\nepos_logo.png" alt="NEPOS Logo" width=150 height=185>
       </a>
-      <p class='gen_text justify med_text'>
+      <p class='gen_text justify med_text margin0'>
       In late 2013, after a few lessons in programming, my brother in-law half jokingly said that his business was paying a lot 
       for its POS software, and whether I could make him a simple POS and cash management system to replace it. So I started researching 
       and playing around with Python, seeing the task more as a learning exercise rather than anything serious. But a year and a half later 
@@ -98,11 +98,11 @@
       </p>
     </div>
     <hr>
-    <div class=gen_div>
+    <div class='gen_div margin70'>
       <a href="swift_page.html" title="MT940/50 Generator">
-        <img class='genphoto margin70' src="..\images\mt_logo.png" alt="MT Logo" width=150 height=150>
+        <img class=genphoto src="..\images\logos\mt_logo.png" alt="MT Logo" width=150 height=150>
       </a>
-      <p class='gen_text justify med_text'>
+      <p class='gen_text justify med_text margin0'>
       One of my first jobs was as a System Administrator and a daily task was checking the banks swift messaging system for 
       the Vostro accounts, as well as incoming cash statements for the bank's main reconciliation system. I learnt a lot about swift 
       message structure and standards, and so it seemed only fitting that one of my first programs be a conversion script for such 
